now with picture(s)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
     <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "https://www.google.de/search?q=magic+symbol&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjhhrKZm9TeAhUL3SwKHUt9A-wQ_AUIDigB&biw=1366&bih=626#imgrc=9p9zRO15kHj52M:", height: 50 %>
+    <%= image_tag "https://picsum.photos/200/300/?random
+", height: 50 %>
   <% end %>
 
   <!-- Right Navigation -->
@@ -29,7 +30,7 @@
     <!-- Avatar with dropdown menu -->
     <div class="navbar-wagon-item">
       <div class="dropdown">
-        <%= image_tag ("https://unsplash.com/photos/pg_WCHWSdT8"), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+        <%= image_tag ("https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwijo8_zn9TeAhVFXiwKHRpiBRMQjRx6BAgBEAU&url=https%3A%2F%2Fwww.cnn.com%2F2018%2F11%2F13%2Fentertainment%2Fpokemon-detective-pikachu-trailer-scli-intl%2Findex.html&psig=AOvVaw3jmo-br6LRk3236bkippfL&ust=1542297459681223"), class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
             <%= link_to "#" do %>
